--- a/MarriageLicence/Web.config
+++ b/MarriageLicence/Web.config
@@ -75,4 +75,16 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_ILicensingService" messageEncoding="Mtom" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://th48www:100/lib/adm/LicensingService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ILicensingService"
+        contract="LicenseService.ILicensingService" name="BasicHttpBinding_ILicensingService" />
+    </client>
+  </system.serviceModel>
 </configuration>
