--- a/MarriageLicence/MarriageLicence.csproj
+++ b/MarriageLicence/MarriageLicence.csproj
@@ -159,6 +159,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\MarriageLicenseViewModel.cs" />
+    <Compile Include="Models\Repository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
