--- a/MarriageLicence/MarriageLicence.csproj
+++ b/MarriageLicence/MarriageLicence.csproj
@@ -222,6 +222,7 @@
     <None Include="Connected Services\LicenseService\Whitby.Framework.Data1.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
