--- a/MarriageLicence/Web.config
+++ b/MarriageLicence/Web.config
@@ -11,8 +11,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.6.1"/>
-    <httpRuntime targetFramework="4.6.1"/>
+    <httpCookies requireSSL="true"/>
+    <httpRuntime enableVersionHeader="false"/>
+    <compilation debug="false" targetFramework="4.6.1"/>
+   
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
     </httpModules>
